--- a/src/pages/viewMaterial/style.scss
+++ b/src/pages/viewMaterial/style.scss
@@ -3,6 +3,8 @@
 .viewMaterial-container {
   width: min-content;
   margin: 0 auto 40px;
+  border: 1px solid gray;
+  padding: 20px 60px;
 
   h2 {
     text-align: center;
@@ -18,7 +20,6 @@
     gap: 40px;
     width: fit-content;
     margin: 40px auto 70px;
-
     button {
       padding: 0 24px;
     }
