--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -108,3 +108,41 @@ input[type="submit"] {
     cursor: pointer;
   }
 }
+
+/* Modal */
+.modalBackground {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  inset: 0;
+}
+
+.modalContent {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  max-height: calc(100vh - 40px);
+  padding: 32px;
+  background-color: #fff;
+  border-radius: 6px;
+}
+
+/*****************   Loader */
+.loader-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: min-content;
+  width: min-content;
+
+  h1 {
+    width: max-content;
+  }
+
+  .lds-ring {
+    display: block;
+    margin: 20px auto 0;
+  }
+}
