--- a/src/components/searchBar/style.scss
+++ b/src/components/searchBar/style.scss
@@ -1,6 +1,6 @@
-.searchbar-container {
-  width: 400px;
-  margin: 0 auto 40px;
+.searchBar-container {
+  width: max-content;
+  margin: auto;
   gap: 10px;
   border: 1px solid black;
 
