--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -6,6 +6,10 @@
     margin: 0 auto 40px;
   }
 
+  .searchBar-container {
+    margin-bottom: 40px;
+  }
+
   .cardItem-container:not(:last-child) {
     border-bottom: 1px solid grey;
     margin-bottom: 40px;
